--- a/app/src/main/res/drawable/border_eng.xml
+++ b/app/src/main/res/drawable/border_eng.xml
@@ -5,6 +5,9 @@
         android:width="2dp"
         android:color="@color/colorToolbar" />
     <corners
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"/>
+        android:bottomLeftRadius="50dp"
+        android:topLeftRadius="50dp"
+        android:bottomRightRadius="50dp"
+        android:topRightRadius="50dp"
+        />
 </shape>
