--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="381dp"
+        android:layout_width="match_parent"
         android:layout_height="228dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -49,58 +49,72 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="12dp"
         android:gravity="center"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:weightSum="10"
         app:layout_constraintBottom_toTopOf="@+id/btnCamera"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="99dp"
-                android:layout_height="73dp"
-                android:src="@drawable/hand" />
+
+        <ImageView
+            android:id="@+id/btnSpeak"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="2"
+            android:gravity="left"
+            android:scaleType="fitCenter"
+            android:src="@drawable/speaker2" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtResult1"
-                android:layout_width="178dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
                 android:fontFamily="@font/lapsusprobold"
                 android:gravity="center"
                 android:text="Monkey"
                 android:textColor="#ff0000"
-                android:textSize="50dp" />
+                android:textSize="40dp" />
 
 
+            <TextView
+                android:id="@+id/txtPronunciation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="/'mʌŋki/ "
+                android:textColor="#000000"
+                android:textSize="25dp" />
 
-
+            <TextView
+                android:id="@+id/txtVienamese1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Con Khỉ"
+                android:textColor="#ff0000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
 
-
-        <TextView
-            android:id="@+id/txtPronunciation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="/'mʌŋki/ "
-            android:textSize="25dp"
-            android:textColor="#000000"/>
-
-        <TextView
-            android:textStyle="bold"
-            android:id="@+id/txtVienamese1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/gloriahallelujah"
-            android:gravity="center"
-            android:text="Con Khỉ"
-            android:textSize="35dp"
-            android:textColor="#ff0000"/>
+        <ImageView
+            android:id="@+id/btnLuyentap"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_weight="2"
+            android:fontFamily="@font/lapsusprobold"
+            android:scaleType="fitCenter"
+            android:src="@drawable/luyentap"
+            android:textAllCaps="false" />
 
 
     </LinearLayout>
@@ -124,6 +138,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:src="@drawable/bookandpen"
         android:id="@+id/ivResult"
         android:layout_width="391dp"
         android:layout_height="206dp"
@@ -139,5 +154,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:onClick="clickBook"
+        android:id="@+id/imageView3"
+        android:layout_width="214dp"
+        android:layout_height="318dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:translationZ="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivResult"
+        app:layout_constraintEnd_toEndOf="@+id/ivResult"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="@+id/ivResult"
+        app:layout_constraintTop_toTopOf="@+id/ivResult"
+        app:srcCompat="@drawable/ibook" />
+
+    <ImageView
+        android:onClick="clickPen"
+        android:id="@+id/imageView4"
+        android:layout_width="186dp"
+        android:layout_height="33dp"
+        android:translationZ="3dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivResult"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/ivResult"
+        app:layout_constraintVertical_bias="0.52"
+        app:srcCompat="@drawable/ipen" />
 
 </android.support.constraint.ConstraintLayout>
